# algo-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  MIGRATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  celery_worker.py  docker-compose.yml  fix_env.py  high-level-architecture.md  main.py  prometheus.yml  pyproject.toml  quick_setup.sh  refactor.md  requirements-minimal.txt  requirements.txt  run.py  run_minimal.py  run_test.sh  setup.py  start.sh  test_env_fix.py  test_minimal_startup.py  test_server.py  test_webhook.sh  test_with_docker.sh
.github/workflows/: ci.yml
app/api/v1/: ai_analysis.py  ai_analysis_optimized.py  auth.py  backtest.py  execution.py  profiling.py  status.py  strategies.py  tasks.py  trade_controller.py  tradingview_webhook.py  webhooks.py
app/core/: celery_app.py  config.py  dependencies.py  errors.py  logger.py  middleware.py  rate_limit.py  telemetry.py
app/models/: ai_analysis.py  backtest.py  base.py  tradingview.py
app/services/: ai_service.py  ai_webhook_processor.py  backtester.py  state_manager.py
app/services/execution/: __init__.py
app/services/strategies/: ai_enhanced_strategy.py  base.py  ema_crossover.py
app/workers/: __init__.py  tasks.py
docs/: rate_limiting.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx
frontend/src/components/dashboard/: AdvancedChart.tsx  Dashboard.tsx  MetricCard.tsx  ModernDashboard.tsx  PerformanceChart.tsx  PortfolioAllocation.tsx  PositionsTable.tsx  RecentActivity.tsx  RecentTrades.tsx  StrategyControl.tsx  WatchList.tsx
frontend/src/hooks/: useApiData.ts
frontend/src/services/: api.ts
scripts/: __init__.py  sample_webhook_payloads.json  setup_test_env.sh  telemetry_example.py  test_new_endpoints.py  test_refactoring.py  test_webhook_flow.py
tests/: conftest.py  test_health.py  test_rate_limit.py
